# CoreAgentsGW

./: .gitignore  README.md  conftest.py  ruff.toml
.meta/: packages
aiosqlite/: __init__.py
android-app/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
city_guide/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  docker-compose.yml  pyproject.toml
city_guide/alembic/: env.py  script.py.mako
city_guide/alembic/versions/: 20240601_0001_init_routes.py  20240615_0002_add_users_table.py
city_guide/app/: debug.py  http.py  main.py
city_guide/app/api/: dependencies.py
city_guide/app/api/v1/: auth.py  health.py  places.py  poi.py  profile.py  prompts.py  quiz.py  routes.py
city_guide/app/core/: config.py  deps.py  logging.py  security.py
city_guide/app/db/: __init__.py  entities.py  models.py  repo.py  storage.py
city_guide/app/domain/: constraint_validator.py  geo.py  route_optimizer.py
city_guide/app/schemas/: auth.py  common.py  places.py  poi.py  profile.py  prompts.py  quiz.py  responses.py  route.py  trip.py
city_guide/app/services/: google_directions.py  google_poi.py  google_tts.py  gpt_client.py
city_guide/dev/sql/: seed_poi_vilnius.sql
city_guide/tests/: conftest.py  test_auth.py  test_health.py  test_openapi_contract.py  test_profile.py  test_routes_generate.py  test_trip_routes.py
frontend-main/frontend-main/: .gitlab-ci.yml  (+7 more)
httpx/: __init__.py
openai/: __init__.py
pydantic/: __init__.py
tenacity/: __init__.py
(+135 files in other folders)
