[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "city-guide"
version = "0.1.0"
description = "City Guide API service"
authors = ["City Guide Team <team@example.com>"]
readme = "README.md"
packages = [{include = "city_guide"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
aiofiles = "^23.2.1"
httpx = {version = "^0.27.0", extras = ["http2"]}
tenacity = "^8.2.3"
openai = "^1.30.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.4.5"
isort = "^5.13.2"
pytest-httpx = "^0.30.0"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
extend-select = ["B", "C4", "I", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["city_guide"]
